Fixing background blur on mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -466,7 +466,7 @@ footer{
     flex-direction: column;
     padding: min(30vh, 10rem) 2em; /* min function return the minimum value betweeen the passed ones*/
     background-color: hsl(0 0% 100% /0.1);
-    backdrop-filter: blur(1rem);
+    backdrop-filter: blur(2rem);
     transform: translateY(-100%);
     transition: transform 350ms ease-in-out;
   }
